test_regress/t/t_alias_transitive_unsup.out
%Error-UNSUPPORTED: t/t_alias_transitive_unsup.v:42:3: Unsupported: alias statements with more than 2 operands
   42 |   alias a = b = c;
      |   ^~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
